--- a/index.html
+++ b/index.html
@@ -4,27 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
   <title>MINTO</title>
 </head>
 <body>
   <header>
-    <div class="header-logo flex-container">
       <img src="assets/logo-main.png" alt="Logo">
-      <div class="header-text">A MINIMAL WEBSITE DESIGN<br/>FROM CSS AUTHOR</div>
-    </div>
-    <div class="header-line"></div>
-    <div class="header-menu flex-container">
-      <img src="" alt="Menu-logo">
-      <div class="header-menu-navbar flex-container">
-        <div>Home</div>
-        <div>About Us</div>
-        <div>Services</div>
-        <div>Contact Us</div>
+      <div class="header-text">A MINIMAL WESITE DESIGN<br/>FROM CSS AUTHOR</div>
+  </header>
+  <div class="content">
+    <div class="content-menu flex-container">
+        <img src="assets/logo-small.png" alt="Menu-logo">
+      <div class="content-menu-navbar flex-container">
+        <div class="nav-item"><i class="fas fa-home"></i> Home</div>
+        <div class="nav-item"><i class="fas fa-user"></i> About Us</div>
+        <div class="nav-item"><i class="far fa-sun"></i> Services</div>
+        <div class="nav-item"><i class="fas fa-envelope"></i> Contact Us</div>
       </div>
     </div>
-  </header>
-  <div class="content"></div>
+    <div class="image-slider">
+
+    </div>
+    <div class="content-description"><span>Lorem ipsum dolor sit amet,</span> consectetur adipiscing elit, sed do eiusmod tempor incidi-<br/>dunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <br/>ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+
+  </div>
   
 </body>
 </html>
