--- a/index.html
+++ b/index.html
@@ -25,11 +25,33 @@
       </div>
     </div>
     <div class="image-slider">
-
+      <img src="assets/slider-img.png" alt="">
     </div>
-    <div class="content-description"><span>Lorem ipsum dolor sit amet,</span> consectetur adipiscing elit, sed do eiusmod tempor incidi-<br/>dunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <br/>ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-
+    <div class="content-quote"><span>Lorem ipsum dolor sit amet,</span> consectetur adipiscing elit, sed do eiusmod tempor incidi-<br/>dunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <br/>ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+    <div class="content-description flex-container">
+      <img src="assets/logo-descr.png" alt="Description logo"/>
+      <div>
+          <h4>Lorem ipsum dolor sit amet</h4>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+        </div>
+        <button class="read-more">Read more <i class="fas fa-long-arrow-alt-right"></i></button>
+    </div>
+    <div class="content-example">
+        <div class="content-example-header">
+          <span>Where</span> We Have Been Featured
+        </div>
+          <img src="assets/example_img.png" alt="">
+    </div>
   </div>
+  <footer>
+    <div class="footer-content">
+      <div class="copyright">&copyCopyright 2018 - All rights reserved</div>
+      <div class="social">
+        <button id="facebook"><i class="fab fa-facebook-f"></i></button>
+        <button id="twitter"><i class="fab fa-twitter"></i></button>
+      </div>
+    </div>
+  </footer>
   
 </body>
 </html>
